--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "Staffan Runnsjö",
   "license": "MIT",
   "dependencies": {
-    "extend": ">=3.0.0",
-    "mustache": ">=2.3.0"
+    "extend": "^3.0.1",
+    "mustache": "^2.3.0",
+    "node-watch": "^0.5.5",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "electron": ">=1.3.1"
