--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"extend": "^3.0.1",
+		"fs-extra": "^4.0.2",
 		"mustache": "^2.3.0",
 		"node-watch": "^0.5.5",
 		"uuid": "^3.1.0"
