--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
 	"license": "MIT",
 	"dependencies": {
 		"extend": "^3.0.1",
-		"fs-extra": "^4.0.2",
+		"fs-extra": "^4.0.3",
 		"mustache": "^2.3.0",
 		"node-watch": "^0.5.5",
 		"uuid": "^3.1.0"
 	},
 	"devDependencies": {
-		"electron": ">=1.3.1"
+		"electron": "^1.8.1"
 	}
 }
