--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "phrases-editor",
 	"productName": "phrases-editor",
-	"version": "1.6.4",
+	"version": "2.0.0",
 	"description": "Phrases editor for Netset phrases files",
 	"main": "main.js",
 	"scripts": {
-		"start": "electron main.js",
+		"start": "electron .",
 		"package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=icon/icon.icns --prune=true --out=release-builds --version-string.ProductName=\"Phrases\""
 	},
 	"repository": "git@github.com:loclahost/phrases-editor.git",
